# prism-suite-prism

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RESEARCH.md  SUITE.md  TESTING_REPORT.md  UI_UX.md
crates/prism-color/: Cargo.toml
crates/prism-color/src/: lib.rs
crates/prism-core/: Cargo.toml
crates/prism-core/src/: adjust.rs  blend.rs  curve.rs  detail.rs  document.rs  fill.rs  geometry.rs  gradient.rs  heal.rs  histogram.rs  inpaint.rs  layer.rs  lib.rs  raster.rs  shape.rs  tile.rs  tone.rs  warp.rs
crates/prism-io/: Cargo.toml
crates/prism-io/src/: document_file.rs  export.rs  exr_io.rs  lib.rs  psd_import.rs  resize.rs  text.rs
crates/prism-media/: Cargo.toml
crates/prism-media/src/: lib.rs
