[package]
name = "prism-io"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prism-core.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json = "1"
lz4_flex = "0.11"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "tiff",
    "bmp",
    "gif",
] }
fast_image_resize = "6"
bytemuck.workspace = true
cosmic-text = "0.19.0"
psd = "0.3.5"
exr = "1.74.0"

[lints]
workspace = true
